Rollback node-sass version to ^4.14.1, add NavHeader and FavouriteCoins components with styles

--- a/src/index.scss
+++ b/src/index.scss
@@ -11,3 +11,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.container {
+  @media (min-width: 768px) {
+    width: 768px;
+  }
+
+  @media (min-width: 1024px) {
+    width: 1024px;
+  }
+}
