--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,9 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -13,6 +19,8 @@ code {
 }
 
 .container {
+  margin: 0 auto;
+
   @media (min-width: 768px) {
     width: 768px;
   }
