--- a/src/components/AllCoins/AllCoins.styles.scss
+++ b/src/components/AllCoins/AllCoins.styles.scss
@@ -54,8 +54,16 @@ h3 {
     font-weight: 600;
     font-size: 13px;
     text-align: unset;
-  }
 
+  }
+ 
+  span.coin-name {
+    &:hover {
+      cursor: pointer;
+      background-color: #F3F3F3;
+    }
+  }
+  
   li {
     display: flex;
     justify-content: space-between;
