--- a/src/components/FavouriteCoins/FavouriteCoins.styles.scss
+++ b/src/components/FavouriteCoins/FavouriteCoins.styles.scss
@@ -3,6 +3,65 @@
   margin: 0 auto;
 }
 
+.fav-coin {
+  transition: all 300ms;
+  
+  /* Rectangle 1 */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  // position: absolute;
+  width: 152px;
+  height: 67px;
+  // left: 189px;
+  // top: 178px;
+
+  font-family: Open Sans;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 13px;
+  line-height: 127.34%;
+
+  /* identical to box height, or 17px */
+  text-align: center;
+  text-transform: uppercase;
+
+  color: #FFFFFF;
+
+
+
+  /* white */
+  border: 1px solid #FFFFFF;
+  box-sizing: border-box;
+
+  span {
+    display: flex;
+    align-items: center;
+  }
+
+  .fav-coin-image {
+    margin-right: 0.5rem;
+  }
+
+  &:hover {
+    background-color: #397BCA;
+    border-color: #397BCA;
+    cursor: pointer;
+
+    span {
+      display: none;
+    }
+
+    &:after {
+      content: 'REMOVE';
+    }
+  }
+}
+
+.fav-coin-list {
+  display: flex;
+}
+
 /* Favourite coins */
 h1 {
   padding-bottom: 3.75rem;
