--- a/src/components/SelectedCoin/SelectedCoin.styles.scss
+++ b/src/components/SelectedCoin/SelectedCoin.styles.scss
@@ -1,24 +1,18 @@
 h5 {
-  // width: 80%;
   margin: 0 auto;
   padding-top: 3.6875rem;
 
-  font-family: 'Open Sans';
+  font-family: "Open Sans";
   font-style: italic;
   font-weight: normal;
   font-size: 15px;
   line-height: 132%;
-  
-  /* identical to box height, or 20px */
-  
-  /* Black */
-  color: #000000;
+  color: #000;
 }
 
 .selected-coin {
   @media (min-width: 768px) {
     display: flex;
-    // width: 84.375%;
     margin-top: 1.2rem;
     margin-bottom: 8rem;
   }
@@ -28,21 +22,12 @@ h5 {
   padding: 2.5rem;
   margin-top: 1.1875rem;
   margin-left: auto;
-  margin-right: auto; 
-  // width: 80%;
-  /* Rectangle 8 */
-
-  // position: absolute;
-  // width: 312px;
+  margin-right: auto;
   height: 455px;
   left: 32px;
   top: 664px;
-
-  /* Concrete */
-  background: #F3F3F3;
-
-  /* mercury */
-  border: 1px solid #E2E2E2;
+  background: #f3f3f3;
+  border: 1px solid #e2e2e2;
   box-sizing: border-box;
 
   @media (min-width: 768px) {
@@ -54,34 +39,17 @@ h5 {
 .selected-coin-header {
   display: flex;
   align-items: center;
-  /* Bitcoin (BTC) */
+  border-bottom: 2px solid #fff;
 
-  // position: absolute;
-  // width: 122px;
-  // height: 26px;
-  // left: 98px;
-  // top: 710px;
-
-  // solid white border under coin name
-  // position: absolute;
-  // width: 237px;
-  // height: 0px;
-  // left: 72px;
-  // top: 745px;
-
-  border-bottom: 2px solid #FFFFFF;
-
-  font-family: 'Open Sans';
+  font-family: "Open Sans";
   font-style: normal;
   font-weight: bold;
   font-size: 16px;
   line-height: 163.3%;
-
-  /* or 26px */
   letter-spacing: 0.05em;
   text-transform: uppercase;
 
-  color: #000000;
+  color: #000;
 
   img {
     width: 15px;
@@ -95,20 +63,12 @@ h5 {
 }
 
 .trade-options {
-  // width: 80%;
   margin: 0 auto;
-  /* Rectangle 6 */
-
-  // position: absolute;
-  // width: 312px;
   height: 420px;
   left: 32px;
   top: 1118px;
-
-  background: #FFFFFF;
-
-  /* mercury */
-  border: 1px solid #E2E2E2;
+  background: #fff;
+  border: 1px solid #e2e2e2;
   box-sizing: border-box;
 
   @media (min-width: 768px) {
@@ -122,18 +82,10 @@ h5 {
   list-style: none;
 
   li {
-    // position: absolute;
-    // width: 210px;
-    // height: 231px;
-    // left: 75px;
-    // top: 756px;
-
-    font-family: 'Open Sans';
+    font-family: "Open Sans";
     font-style: normal;
     font-size: 13px;
     line-height: 250%;
-
-    /* or 32px */
     letter-spacing: 0.01em;
     text-transform: uppercase;
 
@@ -149,25 +101,15 @@ h5 {
 #add-to-favourites-button {
   display: flex;
   align-items: center;
-  color: #4A90E2;
+  color: #4a90e2;
   margin-top: 24px;
   cursor: pointer;
 
   /* Add to favourites */
-
-  // position: absolute;
-  // width: 123px;
-  // height: 20px;
-  // left: 100px;
-  // top: 1012px;
-
-  font-family: 'Open Sans';
+  font-family: "Open Sans";
   font-style: normal;
   font-weight: bold;
   font-size: 12px;
-  // line-height: 163.3%;
-
-  /* identical to box height, or 20px */
   text-transform: uppercase;
 
   p {
@@ -175,7 +117,10 @@ h5 {
   }
 }
 
-#select-trade-currency, #amount, button, input {
+#select-trade-currency,
+#amount,
+button,
+input {
   &:hover {
     cursor: pointer;
   }
@@ -189,8 +134,8 @@ h5 {
   margin: 0 auto;
 
   button.selected {
-    background-color: #4A90E2;
-    color: #FFFFFF;
+    background-color: #4a90e2;
+    color: #fff;
   }
 
   button {
@@ -198,43 +143,17 @@ h5 {
     width: 7.625rem;
     cursor: pointer;
     outline: none;
-
-    /* Rectangle 6 */
-
-    // position: absolute;
-    // width: 312px;
-    // height: 420px;
-    // left: 32px;
-    // top: 1118px;
-
-    background: #FFFFFF;
-
-    /* mercury */
-    // border: 1px solid #E2E2E2;
-    border: 1px solid #4A90E2;
-    // box-sizing: border-box;
-
-    /* Sell */
-
-    // position: absolute;
-    // width: 33px;
-    // height: 21px;
-    // left: calc(50% - 33px/2 + 1.5px);
-    // top: calc(50% - 21px/2 + 1.5px);
-
-    font-family: 'Open Sans';
+    background: #fff;
+    border: 1px solid #4a90e2;
+    font-family: "Open Sans";
     font-style: normal;
     font-weight: 600;
     font-size: 13px;
     line-height: 155.25%;
-
-    /* identical to box height, or 20px */
     text-align: center;
     letter-spacing: 0.07em;
     text-transform: uppercase;
-
-    /* Hover Blue */
-    color: #397BCA;
+    color: #397bca;
   }
 }
 
@@ -243,70 +162,37 @@ h5 {
   margin: 0 auto;
   margin-top: 3.4375rem;
   margin-bottom: 6.1875rem;
-  
+
   button {
     width: 100%;
-    // width: 15.9375rem;
     height: 3.625rem;
     border: none;
     margin-top: 3.3125rem;
-    /* Rectangle */
-  
-    // position: absolute;
-    // left: 0%;
-    // right: 0%;
-    // top: 0%;
-    // bottom: 0%;
-  
-    /* NC blue */
-    background: #4A90E2;
+    background: #4a90e2;
+
     /* Submit */
-    
-    // position: absolute;
-    // width: 53px;
-    // height: 21px;
-    // left: calc(50% - 53px/2 - 2px);
-    // top: calc(50% - 21px/2 + 1.5px);
-    
-    font-family: 'Open Sans';
+    font-family: "Open Sans";
     font-style: normal;
     font-weight: 600;
     font-size: 13px;
     line-height: 155.25%;
-    
-    /* identical to box height, or 20px */
     text-align: center;
     letter-spacing: 0.05em;
     text-transform: uppercase;
-    
-    /* white */
-    color: #FFFFFF;
-  }
-
-  @media (min-width: 768px) {
-    // margin: unset;
+    color: #fff;
   }
 }
 
 .success-message {
   margin-top: 1rem;
   padding-bottom: 2.6875rem;
-  // position: absolute;
-  // width: 270px;
-  // height: 19px;
-  // left: calc(50% - 270px/2 + 165px);
-  // top: 1129px;
-
   font-family: Open Sans;
   font-style: normal;
   font-weight: 600;
   font-size: 12px;
   line-height: 155.25%;
-
-  /* identical to box height, or 19px */
   text-transform: capitalize;
 
   /* Complete */
-  color: #00BC7C;
-
+  color: #00bc7c;
 }
