--- a/src/components/DropDownMenu/DropDownMenu.styles.scss
+++ b/src/components/DropDownMenu/DropDownMenu.styles.scss
@@ -3,32 +3,12 @@
   display: flex;
   justify-content: space-between;
   margin-top: 2.0625rem;
-  /* Line 7 */
-  
-  // position: absolute;
-  // width: 255px;
-  // height: 0px;
-  // left: 58px;
-  // top: 1298px;
-  
-  /* mercury */
-  border-bottom: 1px solid #E2E2E2;
-
-  /* amount */
-
-  // position: absolute;
-  // width: 51px;
-  // height: 20px;
-  // left: 58px;
-  // top: 1331px;
-
-  font-family: 'Open Sans';
+  border-bottom: 1px solid #e2e2e2;
+  font-family: "Open Sans";
   font-style: normal;
   font-weight: 600;
   font-size: 13px;
   line-height: 155.25%;
-
-  /* or 20px */
   text-transform: capitalize;
 
   color: #000000;
@@ -40,14 +20,14 @@
 
   input {
     border: none;
-    font-family: 'Open Sans';
+    font-family: "Open Sans";
     font-style: normal;
     font-weight: 600;
     font-size: 13px;
     line-height: 155.25%;
 
     &::placeholder {
-      font-family: 'Open Sans';
+      font-family: "Open Sans";
       font-style: normal;
       font-weight: 600;
       font-size: 13px;
@@ -68,10 +48,10 @@
   position: absolute;
   background-color: white;
   width: 16.2rem;
-  transition: height 800ms;
+  transition: height 200ms;
 
   li:hover {
-    background-color: #F3F3F3;
+    background-color: #f3f3f3;
   }
 }
 
