--- a/src/components/FavouriteCoins/FavouriteCoins.styles.scss
+++ b/src/components/FavouriteCoins/FavouriteCoins.styles.scss
@@ -5,7 +5,7 @@
 
 .fav-coin {
   transition: all 300ms;
-  
+
   /* Rectangle 1 */
   display: flex;
   align-items: center;
@@ -31,10 +31,10 @@
   text-align: center;
   text-transform: uppercase;
 
-  color: #FFFFFF;
+  color: #ffffff;
 
   /* white */
-  border: 1px solid #FFFFFF;
+  border: 1px solid #ffffff;
   box-sizing: border-box;
 
   span {
@@ -47,8 +47,8 @@
   }
 
   &:hover {
-    background-color: #397BCA;
-    border-color: #397BCA;
+    background-color: #397bca;
+    border-color: #397bca;
     cursor: pointer;
 
     span {
@@ -56,7 +56,7 @@
     }
 
     &:after {
-      content: 'REMOVE';
+      content: "REMOVE";
     }
   }
 }
@@ -105,19 +105,19 @@ h1 {
   height: 37px;
   left: 36px;
   top: 80px;
-  
+
   font-family: Gibson;
   font-style: normal;
   font-weight: 600;
   font-size: 29px;
   line-height: 127.34%;
-  
+
   /* identical to box height, or 37px */
   letter-spacing: 0.02em;
   text-transform: capitalize;
-  
+
   /* white */
-  color: #FFFFFF;
+  color: #ffffff;
 
   @media (min-width: 768px) {
     padding-bottom: 5.375rem;
@@ -126,21 +126,14 @@ h1 {
 
 h2 {
   /* No Favourite Coins Added */
-
-  // position: absolute;
   width: 158px;
   height: 17px;
   left: 36px;
   top: 140px;
-
   font-family: Open Sans;
   font-style: normal;
   font-weight: normal;
   font-size: 13px;
   line-height: 132%;
-
-  /* or 17px */
-
-  /* white */
-  color: #FFFFFF;
+  color: #ffffff;
 }
